--- a/guide/docs/getting-started/using-cogs.mdx
+++ b/guide/docs/getting-started/using-cogs.mdx
@@ -18,8 +18,8 @@ keywords: [disnake, bot, guide, tutorial, cogs, extensions, python]
 
 ## Создание файлов
 
-What we code here will extend on the code from [**Initial Files**](./initial-files.mdx), and thus we assume that there
-already exists a `main.py` file in your directory which initiates a `commands.Bot()` instance.
+Тот код, который мы написали, будет частью [**Начальных файлов**](./initial-files.mdx), 
+и мы предпологаем, что там уже существует файл `main.py` в вашем каталоге, который иницирует экземпляр `commands.Bot()`.
 
 ```python title="main.py"
 import disnake
